@@ -3,7 +3,7 @@
 	$page["file"] = "alarms.html";
 
 	include "include/config.inc";
-	show_header($page["title"],0);
+	show_header($page["title"],0,0);
 ?>
 
 <?
