@@ -2,46 +2,55 @@
 	include "include/config.inc";
 	$page["title"] = "User defined graphs";
 	$page["file"] = "charts.html";
+
+	$nomenu=0;
+	if(isset($fullscreen))
+	{
+		$nomenu=1;
+	}
 	if(isset($graphid))
 	{
-		show_header($page["title"],30);
+		show_header($page["title"],30,$nomenu);
 	}
 	else
 	{
-		show_header($page["title"],0);
+		show_header($page["title"],0,$nomenu);
 	}
 ?>
 
 <?
-	show_table_header_begin();
-	echo "GRAPHS";
-
-	show_table_v_delimiter();
-
-	echo "<font size=2>";
-
-	$lasthost="";
-	$result=DBselect("select graphid,name from graphs order by name");
-
-	for($i=0;$i<DBnum_rows($result);$i++)
+	if(!isset($fullscreen))
 	{
-		$graphid_=DBget_field($result,$i,0);
-		$name=DBget_field($result,$i,1);
-		if( isset($graphid) && ($graphid == $graphid_) )
-		{
-			echo "<b>[";
-		}
-		echo "<a href='charts.html?graphid=$graphid_'>$name</a>";
-		if(isset($graphid) && ($graphid == $graphid_) )
-		{
-			echo "]</b>";
-		}
-		echo " ";
-	}
+		show_table_header_begin();
+		echo "GRAPHS";
 
-	echo "</font>";
-	show_table_header_end();
-	echo "<br>";
+		show_table_v_delimiter();
+
+		echo "<font size=2>";
+
+		$lasthost="";
+		$result=DBselect("select graphid,name from graphs order by name");
+
+		for($i=0;$i<DBnum_rows($result);$i++)
+		{
+			$graphid_=DBget_field($result,$i,0);
+			$name=DBget_field($result,$i,1);
+			if( isset($graphid) && ($graphid == $graphid_) )
+			{
+				echo "<b>[";
+			}
+			echo "<a href='charts.html?graphid=$graphid_'>$name</a>";
+			if(isset($graphid) && ($graphid == $graphid_) )
+			{
+				echo "]</b>";
+			}
+			echo " ";
+		}
+
+		echo "</font>";
+		show_table_header_end();
+		echo "<br>";
+	}
 
 ?>
 
@@ -50,6 +59,14 @@
 	{
 		$result=DBselect("select name from graphs where graphid=$graphid");
 		$map=DBget_field($result,0,0);
+		if(isset($fullscreen))
+		{
+			$map="<a href=\"charts.html?graphid=$graphid\">".$map."</a>";
+		}
+		else
+		{
+			$map="<a href=\"charts.html?graphid=$graphid&fullscreen=1\">".$map."</a>";
+		}
 	}
 	else
 	{
@@ -81,7 +98,7 @@
 	echo "</TR>";
 	echo "</TABLE>";
 
-	if(isset($graphid))
+	if(isset($graphid)&&(!isset($fullscreen)))
 	{
 		echo("<center>");
 		echo("<hr>");
