@@ -2,7 +2,7 @@
 	include "include/config.inc";
 	$page["title"] = "Graphs";
 	$page["file"] = "graphs.html";
-	show_header($page["title"],0);
+	show_header($page["title"],0,0);
 ?>
 
 <?
@@ -24,6 +24,7 @@
 		if($register=="delete")
 		{
 			delete_graph($graphid);
+			unset($graphid);
 		}
 	}
 ?>
