@@ -23,19 +23,19 @@
 
 	if($action=="showhistory")
 	{
-		show_header("$host:$description",$beforenextcheck);
+		show_header("$host:$description",$beforenextcheck,0);
 	}
 	if($action=="showvalues")
 	{
-		show_header("$host:$description",0);
+		show_header("$host:$description",0,0);
 	}
 	if($action=="showfreehist")
 	{
-		show_header("$host:$description",0);
+		show_header("$host:$description",0,0);
 	}
 	if($action=="showplaintxt")
 	{
-		show_header("$host:$description",0);
+		show_header("$host:$description",0,0);
 	}
 ?>
 
