@@ -4,7 +4,7 @@
 
 	include "include/config.inc";
 
-	show_header($page["title"],0);
+	show_header($page["title"],0,0);
 ?>
 
 <?
