@@ -2,47 +2,55 @@
 	include "include/config.inc";
 	$page["title"] = "Network maps";
 	$page["file"] = "maps.html";
+
+	$nomenu=0;
+	if(isset($fullscreen))
+	{
+		$nomenu=1;
+	}
 	if(isset($sysmapid))
 	{
-		show_header($page["title"],30);
+		show_header($page["title"],30,$nomenu);
 	}
 	else
 	{
-		show_header($page["title"],0);
+		show_header($page["title"],0,$nomenu);
 	}
 ?>
 
 <?
-	show_table_header_begin();
-	echo "NETWORK MAPS";
-
-	show_table_v_delimiter();
-
-	echo "<font size=2>";
-
-	$lasthost="";
-	$result=DBselect("select sysmapid,name from sysmaps order by name");
-
-	for($i=0;$i<DBnum_rows($result);$i++)
+	if(!isset($fullscreen))
 	{
-		$sysmapid_=DBget_field($result,$i,0);
-		$name=DBget_field($result,$i,1);
-		if( isset($sysmapid) && ($sysmapid == $sysmapid_) )
+		show_table_header_begin();
+		echo "NETWORK MAPS";
+
+		show_table_v_delimiter();
+
+		echo "<font size=2>";
+
+		$lasthost="";
+		$result=DBselect("select sysmapid,name from sysmaps order by name");
+
+		for($i=0;$i<DBnum_rows($result);$i++)
 		{
-			echo "<b>[";
+			$sysmapid_=DBget_field($result,$i,0);
+			$name=DBget_field($result,$i,1);
+			if( isset($sysmapid) && ($sysmapid == $sysmapid_) )
+			{
+				echo "<b>[";
+			}
+			echo "<a href='maps.html?sysmapid=$sysmapid_'>$name</a>";
+			if(isset($sysmapid) && ($sysmapid == $sysmapid_) )
+			{
+				echo "]</b>";
+			}
+			echo " ";
 		}
-		echo "<a href='maps.html?sysmapid=$sysmapid_'>$name</a>";
-		if(isset($sysmapid) && ($sysmapid == $sysmapid_) )
-		{
-			echo "]</b>";
-		}
-		echo " ";
+
+		echo "</font>";
+		show_table_header_end();
+		echo "<br>";
 	}
-
-	echo "</font>";
-	show_table_header_end();
-	echo "<br>";
-
 ?>
 
 <?
@@ -50,6 +58,14 @@
 	{
 		$result=DBselect("select name from sysmaps where sysmapid=$sysmapid");
 		$map=DBget_field($result,0,0);
+		if(isset($fullscreen))
+		{
+			$map="<a href=\"maps.html?sysmapid=$sysmapid\">".$map."</a>";;
+		}
+		else
+		{
+			$map="<a href=\"maps.html?sysmapid=$sysmapid&fullscreen=1\">".$map."</a>";;
+		}
 	}
 	else
 	{
@@ -57,6 +73,7 @@
 	}
 
 	show_table_header($map);
+
 	echo "<TABLE BORDER=0 COLS=4 WIDTH=\"100%\" BGCOLOR=\"#CCCCCC\" cellspacing=1 cellpadding=3>";
 	echo "<TR BGCOLOR=#EEEEEE>";
 	echo "<TR BGCOLOR=#DDDDDD>";
