@@ -2,7 +2,7 @@
 	include "include/config.inc";
 	$page["title"] = "Status of Zabbix";
 	$page["file"] = "report1.html";
-	show_header($page["title"],0);
+	show_header($page["title"],0,0);
 ?>
 
 <?
