@@ -3,7 +3,7 @@
 	$page["file"] = "tr_status.html";
 
 	include "include/config.inc";
-	show_header($page["title"],10);
+	show_header($page["title"],10,0);
 ?>                                                                                                             
 
 <?
