@@ -3,7 +3,7 @@
 	$page["file"] = "triggers.html";
 
 	include "include/config.inc";
-	show_header($page["title"],0);
+	show_header($page["title"],0,0);
 ?>
 
 <?
@@ -37,6 +37,7 @@
 		if($register=="delete")
 		{
 			delete_trigger($triggerid);
+			unset($triggerid);
 		}
 	}
 ?>
