@@ -3,7 +3,7 @@
 	$page["file"] = "users.html";
 
 	include "include/config.inc";
-	show_header($page["title"],0);
+	show_header($page["title"],0,0);
 ?>
 
 <?
@@ -24,6 +24,7 @@
 		if($register=="delete")
 		{
 			delete_user($userid);
+			unset($userid);
 		}
 		if($register=="update")
 		{
